--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,31 @@
         <version>0.4.1</version>
       </extension>
     </extensions>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+            <configuration>
+              <artifactSet>
+                <excludes>
+                  <exclude>org.jgroups:jgroups:jar:</exclude>
+                  <exclude>commons-logging:commons-logging:jar:</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<finalName>${artifactId}-${version}-with-dependencies</finalName>
+				</configuration>
+			</plugin>
+		</plugins>
   </build>
   
   <reporting>
