--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,30 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.2</version>
       </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+            <configuration>
+              <artifactSet>
+                <excludes>
+                  <exclude>org.jgroups:jgroups:jar:</exclude>
+                  <exclude>commons-logging:commons-logging:jar:</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<finalName>${artifactId}-${version}-with-dependencies</finalName>
+				</configuration>
+			</plugin>
+		
     </plugins>
     </pluginManagement>
     <extensions>
@@ -138,6 +162,7 @@
         <version>0.4.1</version>
       </extension>
     </extensions>
+    
   </build>
 
 </project>
